--- a/style.css
+++ b/style.css
@@ -1,41 +1,24 @@
 body {
-    background: linear-gradient(34deg, rgba(59,39,39,1) 0%, 
-    rgba(115,32,24,1) 24%, rgba(140,35,27,1) 48%, rgba(161,17,9,1) 70%, 
-    rgba(227,4,4,1) 100%);
+    background: rgb(20, 20, 20);
     background-position: center;
     background-size: 100%;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    font-family: 'Roboto Condensed', sans-serif;
-}
-
-h1 {
-    font-family: 'Unbounded', cursive;
-}
-
-h2 {
     font-family: 'Montserrat', sans-serif;
 }
 
-#centralizer {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    height: 90vh;
-}
-
 #container {
-    background-color: rgba(255, 255, 255, .8);
-    color: black;
-    margin-left: auto;
-    margin-right: auto;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     padding-top: 1px;
     padding-left: 15px;
     padding-right: 15px;
     padding-bottom: 10px;
-    width: 70%;
-    border: 2px solid #000000;
+    width: 90%;
+    color: white;
     border-radius: 5px;
 }
 
@@ -47,26 +30,37 @@ h2 {
 
 input {
     border: 2px solid #5497fc;
+    background-color: black;
+    color: white;
     border-radius: 5px;
+    min-height: 30px;
+    min-width: 200px;
+    font-family: 'Montserrat', sans-serif;
 }
 
 button {
-    background-color: #000000;
+    background-color: #ffa600;
     color: white;
     border: none;
     border-radius: 5px;
+    font-size: 20px;
     padding: 10px;
+    min-width: 150px;
 }
 
 button:hover {
-    background-color: #272727;
+    background-color: #ee9500;
 }
 
 button:active {
-    background-color: #494949;
+    background-color: #dd8400;
 }
 
 select {
     border: 2px solid #5497fc;
     border-radius: 5px;
+    min-height: 35px;
+    background-color: black;
+    color: white;
+    font-family: 'Montserrat', sans-serif;
 }
